// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`traverseEntity > Empty Foo entity 1`] = `
[
  {
    "entity": {
      "fields": {},
      "info": {
        "type": "Foo",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo entity with TwoStrings value item 1`] = `
[
  {
    "entity": {
      "fields": {
        "string": "string1",
        "stringList": [
          "string2.1",
          "string2.2",
        ],
        "twoStrings": {
          "string1": "two-1",
          "string2": "two-2",
          "type": "TwoStrings",
        },
      },
      "info": {
        "type": "Foo",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": "string1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": "string1",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": [
      "string2.1",
      "string2.2",
    ],
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      0,
    ],
    "type": "fieldItem",
    "value": "string2.1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      1,
    ],
    "type": "fieldItem",
    "value": "string2.2",
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "valueItem",
    "valueItem": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.twoStrings.string1",
    "type": "field",
    "value": "two-1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
      "string1",
    ],
    "type": "fieldItem",
    "value": "two-1",
  },
  {
    "path": "entity.fields.twoStrings.string2",
    "type": "field",
    "value": "two-2",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
      "string2",
    ],
    "type": "fieldItem",
    "value": "two-2",
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo entity with rich text with TwoStrings value item 1`] = `
[
  {
    "entity": {
      "fields": {
        "richText": {
          "root": {
            "children": [
              {
                "data": {
                  "string1": "two-1",
                  "string2": "two-2",
                  "type": "TwoStrings",
                },
                "format": "",
                "type": "valueItem",
                "version": 1,
              },
            ],
            "direction": "ltr",
            "format": "",
            "indent": 0,
            "type": "root",
            "version": 1,
          },
        },
      },
      "info": {
        "type": "Foo",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": {
      "root": {
        "children": [
          {
            "data": {
              "string1": "two-1",
              "string2": "two-2",
              "type": "TwoStrings",
            },
            "format": "",
            "type": "valueItem",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "type": "root",
        "version": 1,
      },
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": {
      "root": {
        "children": [
          {
            "data": {
              "string1": "two-1",
              "string2": "two-2",
              "type": "TwoStrings",
            },
            "format": "",
            "type": "valueItem",
            "version": 1,
          },
        ],
        "direction": "ltr",
        "format": "",
        "indent": 0,
        "type": "root",
        "version": 1,
      },
    },
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "node": {
      "children": [
        {
          "data": {
            "string1": "two-1",
            "string2": "two-2",
            "type": "TwoStrings",
          },
          "format": "",
          "type": "valueItem",
          "version": 1,
        },
      ],
      "direction": "ltr",
      "format": "",
      "indent": 0,
      "type": "root",
      "version": 1,
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "richTextNode",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "node": {
      "data": {
        "string1": "two-1",
        "string2": "two-2",
        "type": "TwoStrings",
      },
      "format": "",
      "type": "valueItem",
      "version": 1,
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
    ],
    "type": "richTextNode",
  },
  {
    "path": "entity.fields.richText[0].data",
    "type": "valueItem",
    "valueItem": {
      "string1": "two-1",
      "string2": "two-2",
      "type": "TwoStrings",
    },
  },
  {
    "path": "entity.fields.richText[0].data.string1",
    "type": "field",
    "value": "two-1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
      "data",
      "string1",
    ],
    "type": "fieldItem",
    "value": "two-1",
  },
  {
    "path": "entity.fields.richText[0].data.string2",
    "type": "field",
    "value": "two-2",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
      0,
      "data",
      "string2",
    ],
    "type": "fieldItem",
    "value": "two-2",
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo with adminOnly field (published) 1`] = `
[
  {
    "entity": {
      "fields": {
        "adminOnlyString": "Hello admin only",
      },
      "info": {
        "type": "Foo",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Foo with two strings in list 1`] = `
[
  {
    "entity": {
      "fields": {
        "stringList": [
          "string1",
          "string2",
        ],
      },
      "info": {
        "type": "Foo",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": [
      "string1",
      "string2",
    ],
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      0,
    ],
    "type": "fieldItem",
    "value": "string1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      1,
    ],
    "type": "fieldItem",
    "value": "string2",
  },
  {
    "path": "entity.fields.twoStrings",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "twoStrings",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [
        "TwoStrings",
      ],
    },
    "path": [
      "entity",
      "fields",
      "twoStrings",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.adminOnlyString",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": true,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "adminOnlyString",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "adminOnlyString",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > Generated schema type 1`] = `
[
  {
    "entity": {
      "fields": {
        "string": "hello",
        "stringList": [
          "1",
          "2",
        ],
      },
      "id": "123",
      "info": {
        "authKey": "none",
        "createdAt": 2023-09-11T21:54:06.474Z,
        "name": "Name",
        "status": "draft",
        "type": "StringsEntity",
        "updatedAt": 2023-09-11T21:54:06.474Z,
        "valid": true,
        "validPublished": true,
        "version": 1,
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": "hello",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": "hello",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": [
      "1",
      "2",
    ],
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      0,
    ],
    "type": "fieldItem",
    "value": "1",
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": true,
      "matchPattern": null,
      "multiline": false,
      "name": "stringList",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "stringList",
      1,
    ],
    "type": "fieldItem",
    "value": "2",
  },
]
`;

exports[`traverseEntity > traversable: expect boolean, get boolean[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "boolean": [
          true,
          false,
        ],
      },
      "info": {
        "type": "BooleansEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": [
      true,
      false,
    ],
  },
  {
    "message": "Expected single Boolean, got a list",
    "path": "entity.fields.boolean",
    "type": "error",
  },
  {
    "path": "entity.fields.booleanList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect boolean, get string 1`] = `
[
  {
    "entity": {
      "fields": {
        "boolean": "string value",
      },
      "info": {
        "type": "BooleansEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a boolean, got string",
    "path": "entity.fields.boolean",
    "type": "error",
  },
  {
    "path": "entity.fields.booleanList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect boolean[], get boolean 1`] = `
[
  {
    "entity": {
      "fields": {
        "booleanList": true,
      },
      "info": {
        "type": "BooleansEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.boolean",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "boolean",
      "required": false,
      "type": "Boolean",
    },
    "path": [
      "entity",
      "fields",
      "boolean",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of Boolean, got boolean",
    "path": "entity.fields.booleanList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect entity, get entity[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "entity": [
          {
            "id": "id1",
          },
          {
            "id": "id2",
          },
        ],
      },
      "info": {
        "type": "EntitiesEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": [
      {
        "id": "id1",
      },
      {
        "id": "id2",
      },
    ],
  },
  {
    "message": "Expected single Entity, got a list",
    "path": "entity.fields.entity",
    "type": "error",
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect entity, get string 1`] = `
[
  {
    "entity": {
      "fields": {
        "entity": "string value",
      },
      "info": {
        "type": "EntitiesEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected an entity reference, got string",
    "path": "entity.fields.entity",
    "type": "error",
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect entity[], get entity 1`] = `
[
  {
    "entity": {
      "fields": {
        "entitiesList": {
          "id": "123",
        },
      },
      "info": {
        "type": "EntitiesEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.entity",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "list": false,
      "name": "entity",
      "required": false,
      "type": "Entity",
    },
    "path": [
      "entity",
      "fields",
      "entity",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "entity.fields.entityList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect location, get location[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "location": [
          {
            "lat": 1,
            "lng": 2,
          },
        ],
      },
      "info": {
        "type": "LocationsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.location",
    "type": "field",
    "value": [
      {
        "lat": 1,
        "lng": 2,
      },
    ],
  },
  {
    "message": "Expected single Location, got a list",
    "path": "entity.fields.location",
    "type": "error",
  },
  {
    "path": "entity.fields.locationList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect location, get other 1`] = `
[
  {
    "entity": {
      "fields": {
        "location": "string value",
        "locationList": [
          {},
          {
            "lat": "123",
            "lng": 123,
          },
        ],
      },
      "info": {
        "type": "LocationsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.location",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a Location object, got string",
    "path": "entity.fields.location",
    "type": "error",
  },
  {
    "path": "entity.fields.locationList",
    "type": "field",
    "value": [
      {},
      {
        "lat": "123",
        "lng": 123,
      },
    ],
  },
  {
    "message": "Expected {lat: number, lng: number}, got {lat: undefined, lng: undefined}",
    "path": "entity.fields.locationList[0]",
    "type": "error",
  },
  {
    "message": "Expected {lat: number, lng: number}, got {lat: string, lng: number}",
    "path": "entity.fields.locationList[1]",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect location[], get location 1`] = `
[
  {
    "entity": {
      "fields": {
        "locationList": {
          "lat": 1,
          "lng": 2,
        },
      },
      "info": {
        "type": "LocationsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.location",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "location",
      "required": false,
      "type": "Location",
    },
    "path": [
      "entity",
      "fields",
      "location",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of Location, got object",
    "path": "entity.fields.locationList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect number, get number[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "number": [
          1,
          2,
          3,
        ],
      },
      "info": {
        "type": "NumbersEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.number",
    "type": "field",
    "value": [
      1,
      2,
      3,
    ],
  },
  {
    "message": "Expected single Number, got a list",
    "path": "entity.fields.number",
    "type": "error",
  },
  {
    "path": "entity.fields.numberList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect number, get other 1`] = `
[
  {
    "entity": {
      "fields": {
        "number": "string value",
      },
      "info": {
        "type": "NumbersEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.number",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a number, got string",
    "path": "entity.fields.number",
    "type": "error",
  },
  {
    "path": "entity.fields.numberList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect number[], get number 1`] = `
[
  {
    "entity": {
      "fields": {
        "numberList": 123,
      },
      "info": {
        "type": "NumbersEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.number",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "integer": false,
      "list": false,
      "name": "number",
      "required": false,
      "type": "Number",
    },
    "path": [
      "entity",
      "fields",
      "number",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of Number, got number",
    "path": "entity.fields.numberList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect richText, get other 1`] = `
[
  {
    "entity": {
      "fields": {
        "richText": "string value",
      },
      "info": {
        "type": "RichTextsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a RichText object, got string",
    "path": "entity.fields.richText",
    "type": "error",
  },
  {
    "path": "entity.fields.richTextList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect richText, get richText[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "richText": [
          {
            "root": {
              "children": [
                {
                  "children": [
                    {
                      "detail": 0,
                      "format": 0,
                      "mode": "normal",
                      "style": "",
                      "text": "hello",
                      "type": "text",
                      "version": 1,
                    },
                  ],
                  "direction": "ltr",
                  "format": "",
                  "indent": 0,
                  "type": "paragraph",
                  "version": 1,
                },
              ],
              "direction": "ltr",
              "format": "",
              "indent": 0,
              "type": "root",
              "version": 1,
            },
          },
        ],
      },
      "info": {
        "type": "RichTextsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": [
      {
        "root": {
          "children": [
            {
              "children": [
                {
                  "detail": 0,
                  "format": 0,
                  "mode": "normal",
                  "style": "",
                  "text": "hello",
                  "type": "text",
                  "version": 1,
                },
              ],
              "direction": "ltr",
              "format": "",
              "indent": 0,
              "type": "paragraph",
              "version": 1,
            },
          ],
          "direction": "ltr",
          "format": "",
          "indent": 0,
          "type": "root",
          "version": 1,
        },
      },
    ],
  },
  {
    "message": "Expected single RichText, got a list",
    "path": "entity.fields.richText",
    "type": "error",
  },
  {
    "path": "entity.fields.richTextList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect richText[], get richText 1`] = `
[
  {
    "entity": {
      "fields": {
        "richTextList": {
          "root": {
            "children": [
              {
                "children": [
                  {
                    "detail": 0,
                    "format": 0,
                    "mode": "normal",
                    "style": "",
                    "text": "hello",
                    "type": "text",
                    "version": 1,
                  },
                ],
                "direction": "ltr",
                "format": "",
                "indent": 0,
                "type": "paragraph",
                "version": 1,
              },
            ],
            "direction": "ltr",
            "format": "",
            "indent": 0,
            "type": "root",
            "version": 1,
          },
        },
      },
      "info": {
        "type": "RichTextsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.richText",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "entityTypes": [],
      "linkEntityTypes": [],
      "list": false,
      "name": "richText",
      "required": false,
      "richTextNodes": [],
      "type": "RichText",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "richText",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of RichText, got object",
    "path": "entity.fields.richTextList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect string, get other 1`] = `
[
  {
    "entity": {
      "fields": {
        "string": 1,
      },
      "info": {
        "type": "StringsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": 1,
  },
  {
    "message": "Expected a string, got number",
    "path": "entity.fields.string",
    "type": "error",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect string, get string[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "string": [
          "string1",
          "string2",
        ],
      },
      "info": {
        "type": "StringsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": [
      "string1",
      "string2",
    ],
  },
  {
    "message": "Expected single String, got a list",
    "path": "entity.fields.string",
    "type": "error",
  },
  {
    "path": "entity.fields.stringList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect string[], get string 1`] = `
[
  {
    "entity": {
      "fields": {
        "stringList": "one string",
      },
      "info": {
        "type": "StringsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.string",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "entity",
      "fields",
      "string",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of String, got string",
    "path": "entity.fields.stringList",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect valueItem, get other 1`] = `
[
  {
    "entity": {
      "fields": {
        "valueItem": "string value",
        "valueItemList": [
          {
            "lat": 1,
            "lng": 2,
          },
        ],
      },
      "info": {
        "type": "ValueItemsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.valueItem",
    "type": "field",
    "value": "string value",
  },
  {
    "message": "Expected a ValueItem object, got string",
    "path": "entity.fields.valueItem",
    "type": "error",
  },
  {
    "path": "entity.fields.valueItemList",
    "type": "field",
    "value": [
      {
        "lat": 1,
        "lng": 2,
      },
    ],
  },
  {
    "message": "Missing a ValueItem type",
    "path": "entity.fields.valueItemList[0].type",
    "type": "error",
  },
]
`;

exports[`traverseEntity > traversable: expect valueItem, get valueItem[] 1`] = `
[
  {
    "entity": {
      "fields": {
        "valueItem": [
          {
            "type": "TwoStrings",
          },
        ],
      },
      "info": {
        "type": "ValueItemsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.valueItem",
    "type": "field",
    "value": [
      {
        "type": "TwoStrings",
      },
    ],
  },
  {
    "message": "Expected single ValueItem, got a list",
    "path": "entity.fields.valueItem",
    "type": "error",
  },
  {
    "path": "entity.fields.valueItemList",
    "type": "field",
    "value": undefined,
  },
]
`;

exports[`traverseEntity > traversable: expect valueItem[], get valueItem 1`] = `
[
  {
    "entity": {
      "fields": {
        "valueItemList": {
          "type": "TwoStrings",
        },
      },
      "info": {
        "type": "ValueItemsEntity",
      },
    },
    "path": "entity",
    "type": "entity",
  },
  {
    "path": "entity.fields.valueItem",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "list": false,
      "name": "valueItem",
      "required": false,
      "type": "ValueItem",
      "valueTypes": [],
    },
    "path": [
      "entity",
      "fields",
      "valueItem",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "message": "Expected a list of ValueItem, got object",
    "path": "entity.fields.valueItemList",
    "type": "error",
  },
]
`;

exports[`traverseValueItem > Empty TwoStrings value item 1`] = `
[
  {
    "path": "valueItem",
    "type": "valueItem",
    "valueItem": {
      "type": "TwoStrings",
    },
  },
  {
    "path": "valueItem.string1",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string1",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "valueItem",
      "string1",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
  {
    "path": "valueItem.string2",
    "type": "field",
    "value": undefined,
  },
  {
    "fieldSpec": {
      "adminOnly": false,
      "index": null,
      "list": false,
      "matchPattern": null,
      "multiline": false,
      "name": "string2",
      "required": false,
      "type": "String",
      "values": [],
    },
    "path": [
      "valueItem",
      "string2",
    ],
    "type": "fieldItem",
    "value": undefined,
  },
]
`;

exports[`traverseValueItem > No type 1`] = `
[
  {
    "message": "Missing a ValueItem type",
    "path": "valueItem.type",
    "type": "error",
  },
]
`;
